# GroundedDoc

./: .env.example  .gitignore  AGENTS.md  README.md  my_log.md  pyproject.toml
.github/workflows/: ci.yml
agents/grounded_doc/: agent.py
api/: main.py  schemas.py
data/corpus/: acme_privacy_policy.md  fastapi_current.md  fastapi_migration.md  gdpr_summary.md  pipeda_summary.md
data/corpus/regulatory/: gdpr_art13_transparency.md  gdpr_art17_erasure.md  gdpr_processors.md  gdpr_retention.md
docs/: DEVELOPER_GUIDE.md  api.md  architecture.md
extension/: content.js  manifest.json  popup.css  popup.html  popup.js
grounded_doc_agent/: __init__.py  models.py
grounded_doc_agent/agents/: __init__.py  analyze.py  pipeline.py  planner.py  retriever.py  synthesizer.py  tools.py
grounded_doc_agent/config/: __init__.py  settings.py
grounded_doc_agent/eval/: __init__.py  golden_dataset.json  run_eval.py  scorers.py
grounded_doc_agent/ingestion/: __init__.py  chunker.py  claims.py  cli.py  overlay.py  parser.py  pipeline.py
grounded_doc_agent/retrieval/: __init__.py  bm25.py  claims_store.py  vector_index.py
grounded_doc_agent/storage/: __init__.py  backend.py
infra/: Dockerfile  cloudbuild.yaml
scripts/: deploy_cloud_run.sh
tests/: conftest.py  test_analyze.py  test_api_auth.py  test_api_schemas.py  test_chunker.py  test_pipeline.py  test_pipeline_runtime.py  test_scorers.py  test_settings.py
