[project]
name = "grounded-doc-agent"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
version = "0.1.0"
description = "Multi-hop, conflict-aware document intelligence agent with MLflow evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0.0",
    "mlflow>=3.0.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]
gcp = ["google-cloud-storage>=2.18.0"]

[project.scripts]
grounded-ingest = "grounded_doc_agent.ingestion.cli:main"
grounded-eval = "grounded_doc_agent.eval.run_eval:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grounded_doc_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
